--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,28 +38,76 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const inventors1500s = inventors.filter(item => 1500 <= item.year && item.year <=1599);
+    console.table(inventors1500s);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    const inventorNames = inventors.map(item => item.first + " " + item.last);
+    console.table(inventorNames);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    inventors.sort( (a,b) => a.year - b.year );
+    console.table(inventors);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    const totalAge = inventors.reduce((acc,item) => acc + (item.passed - item.year), 0);
+    console.log(totalAge);
 
     // 5. Sort the inventors by years lived
+    inventors.sort( (a,b) => (b.passed - b.year) - (a.passed - a.year) );
+    console.table(inventors);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+    // done in a console somewhere else
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    people.sort();
+    console.table(people);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    let counters = data.reduce(
+      (acc, item) => {
+        switch(item) {
+          case "car":
+            acc[0]++;
+            break;
+          case "truck":
+            acc[1]++;
+            break;
+          case "bike":
+            acc[2]++;
+            break;
+          case "walk":
+            acc[3]++;
+            break;
+          case "van":
+            acc[4]++;
+        }
+
+        return acc;
+      }, [0,0,0,0,0]
+    );
+    console.table(counters);
+
+    let counters2 = data.reduce(
+      (acc, item) => {
+        if (!acc[item]) {
+          acc[item] = 1;
+        } else {
+          acc[item]++;
+        }
+        
+        return acc;
+      }, {}
+    );
+    console.table(counters2);
 
   </script>
 </body>
